# EmberLily

./: .gitignore  .gitmodules  Cargo.toml  build-shader  build-vs2022.bat  configure-vs2022.bat  envWindows.cmake  line_counter.py  run-vs2022.bat  shader-compile.bat
emberlily/: CMakeLists.txt
emberlily/src/: EmberLily.hpp  defines.hpp  main.cpp  test.cpp  test.hpp
emberlily/src/Core/: Application.cpp  Application.hpp  Asserts.hpp  Defines.hpp  GameObject.hpp  KeyCode.hpp  Logger.cpp  Logger.hpp  Window.cpp  Window.hpp
emberlily/src/Events/: ApplicationEvent.hpp  Event.hpp  KeyEvent.hpp  MouseEvent.hpp
emberlily/src/Platform/: Platform.hpp
emberlily/src/Vulkan/: LlyDevice.cpp  LlyDevice.hpp  LlyModel.cpp  LlyModel.hpp  LlyPipeline.cpp  LlyPipeline.hpp  LlySwapChain.cpp  LlySwapChain.hpp  LlyWindow.cpp  LlyWindow.hpp
sampleapp/: CMakeLists.txt
sampleapp/src/: main.cpp
shaders/: simple_shader.frag
src/: camera.rs  lib.rs  main.rs  model.rs  resources.rs  shader.vert  shader.vert.spv  shader.wgsl  texture.rs
src/core/: adapter.rs  application.rs  mod.rs  surface.rs  window.rs
src/renderer/: mod.rs  render_pipeline.rs  render_resource.rs  renderer.rs
src/shaders/: bare_bones.frag.spv
src/vulkan/: adapter.rs  mod.rs  surface.rs  swapchain.rs
src/vulkan/utility/: mod.rs  platforms.rs
