[package]
name = "ember_lily"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.28.6"
env_logger = "0.8"
log = "0.4"
cgmath = "0.18"
wgpu = "0.15"
pollster = "0.2"
bytemuck = {version = "1.12", features = ["derive"]}
image = {version = "0.24.0", default-features = false, features = ["png"]}
